--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,11 @@
 # 웹소켓 통신
 websockets>=11.0.0
 
+# REST API 서버
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.4.0
+
 # 데이터 처리 및 분석
 numpy>=1.24.0
 pandas>=1.5.0
